<resources>
    <string name="app_name">ToDo List</string>

    <string name="title_tasks">My tasks</string>
    <string name="description_fab_new_task">Add new task</string>

    <string name="description_fab_edit_task">Edit task</string>
    <string name="add_fragment_title">Add new task</string>
    <string name="task_detail_fragment_title">Task Details</string>

    <string name="edit_fragment_title">Edit task</string>

    <string name="edt_title_hint">Title <font color='#FF0000'>*</font></string>
    <string name="edt_description_hint">Description <font color='#FF0000'>*</font></string>
    <string name="edt_date_hint">Date</string>
    <string name="edt_hour_hint">Hour</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

    <string name="title_label_detail">Title:  </string>
    <string name="description_label_detail">Description:  </string>

    <string name="btn_txt_create_task">Create task</string>
    <string name="btn_txt_update_task">Update task</string>

    <string name="txt_btn_delete">Delete</string>
    <string name="toolbarTitle">Create task</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="txt_empty_tasks">Oops! No task here. \n Click on the + below to start.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_clock_content">Image clock</string>
    <string name="image_calendar_content">Image calendar</string>
    <string name="made_by_edu">Made by Eduardo Maxwell</string>
    <string name="undo_snackbar">Undo</string>
</resources>