<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TaskDetailFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMakeTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/task_detail_fragment_title"
        app:titleCentered="true"
        app:titleTextColor="@color/black" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />


    <!--TITLE-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_label_detail"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintTop_toBottomOf="@id/toolbarMakeTask" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/txt_title_label"
        app:layout_constraintTop_toTopOf="@id/txt_title_label"
        tools:text="Title task" />
    <!--./TITLE-->

    <!--DESCRIPTION-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description_label_detail"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintTop_toBottomOf="@id/txt_title_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:singleLine="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guidEnd"
        app:layout_constraintStart_toEndOf="@id/txt_description_label"
        app:layout_constraintTop_toTopOf="@id/txt_description_label"
        tools:text="Description task Description task Description task Description task" />
    <!--./DESCRIPTION-->

    <!--DATE-->
    <ImageView
        android:id="@+id/iv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_calendar_content"
        android:src="@drawable/ic_date"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintTop_toBottomOf="@id/edtDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/iv_date"
        app:layout_constraintTop_toTopOf="@id/iv_date"
        tools:text="01/11/1995" />
    <!--./DATE-->

    <!--HOUR-->
    <ImageView
        android:id="@+id/iv_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_clock_content"
        android:src="@drawable/ic_time"
        app:layout_constraintStart_toEndOf="@id/edtDate"
        app:layout_constraintTop_toBottomOf="@id/edtDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edtHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/iv_hour"
        app:layout_constraintTop_toTopOf="@id/iv_date"
        tools:text="18:35" />
    <!--./HOUR-->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_btn_delete"
        app:layout_constraintEnd_toEndOf="@id/guidEnd"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintTop_toBottomOf="@id/iv_date" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/description_fab_edit_task"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>