<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMakeTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/toolbarTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edt_title_hint"
        app:layout_constraintEnd_toEndOf="@id/guidEnd"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintTop_toBottomOf="@id/toolbarMakeTask">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edt_description_hint"
        app:layout_constraintEnd_toEndOf="@id/guidEnd"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintTop_toBottomOf="@id/edtTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="15"
            android:minLines="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/edt_date_hint"
        app:layout_constraintEnd_toStartOf="@id/edtHour"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintTop_toBottomOf="@id/edtDescription"
        app:startIconDrawable="@drawable/ic_date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtHour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:hint="@string/edt_hour_hint"
        app:layout_constraintTop_toTopOf="@id/edtDate"
        app:layout_constraintEnd_toEndOf="@id/guidEnd"
        app:layout_constraintStart_toEndOf="@id/edtDate"
        app:startIconDrawable="@drawable/ic_time">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/txt_cancel"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintEnd_toEndOf="@id/guidEnd"
        app:layout_constraintBottom_toTopOf="@id/btnCreateTask"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/txt_create_task"
        app:layout_constraintStart_toStartOf="@id/guidStart"
        app:layout_constraintEnd_toEndOf="@id/guidEnd"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>